--- a/scss/main.css
+++ b/scss/main.css
@@ -4,9 +4,11 @@
   height: 100%;
   max-width: 380px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 .section__carousel {
-  width: 375px;
+  width: 100%;
   height: 360px;
   position: relative;
 }
@@ -64,10 +66,13 @@
 .section__text {
   width: 100%;
   position: relative;
-  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .section__text ul li {
   position: absolute;
+  padding: 1rem 1rem 3rem 1rem;
   inset: 0;
   opacity: 0;
   transition: opacity 300ms ease-in-out;
@@ -85,24 +90,18 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
   letter-spacing: 0.75rem;
   width: 100%;
-  position: absolute;
-  bottom: -5%;
-  left: 4%;
+  padding-left: 1rem;
 }
 .shop-now div {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  width: 100%;
+  width: 75%;
 }
-
-.bottom {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  height: 100%;
+.shop-now div img {
+  margin-left: 1rem;
 }
 
 .dark {
@@ -111,7 +110,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url(../images/image-about-dark.jpg);
-  margin-top: 4rem;
 }
 
 .light {
@@ -122,12 +120,25 @@
   background-image: url(../images/image-about-light.jpg);
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.wrapper {
+  display: grid;
+  width: 100%;
+  align-self: center;
+}
+
+.top {
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.bottom {
+  margin-top: 1rem;
+  grid-template-rows: repeat(3, 1fr);
+}
+.bottom__container {
   padding: 1rem;
-  margin-bottom: 1rem;
+}
+.bottom h4 {
+  letter-spacing: 0.35rem;
 }
 
 header {
